@@ -5,6 +5,7 @@ CHANGELOG
 * Updated font pack, now with support of extended Latin & Cyrillic alphabets.
 * Fixed bug with road near Bronze Gate & Sarsfield
 * Fixed bug with towers quantity near "Three Towers" waypoint
+* Fixed bug with waypoint cooldown
 
 >>VERSION 17.7.2
 + Greatly improved Polish translation (prod. Axel Snow)
